--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <title>Olá Mundo!</title>
-        
+
     </head>
+    <header>
+        <h1>Olá Mundo! Essa é a minha primeira página em WEB!</h1>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Professores</li>
+                <li>Fale Conosco</li>                
+            </ul>
+        </nav>
+    </header>
 </html>
