--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                 <li>Home</li>
                 <li>Professores</li>
                 <li>Fale Conosco</li>
-                <li>O Senhor do Aneis é melhor que Harry Potter</li>
+                <li>O Senhor do Anéis é melhor que Harry Potter</li>
+                <li>Star Wars é > que Guerra nas Estrelas</li>
                         
             </ul>
         </nav>
