--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
         <h1>Olá Mundo! Essa é a minha primeira página em WEB!</h1>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Professores</li>
-                <li>Fale Conosco</li>
-                <li>O Senhor do Anéis é melhor que Harry Potter</li>
-                <li>Star Wars é > que Guerra nas Estrelas</li>
-                        
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Professores.html">Professores</a></li>
+                <li><a href="FaleConosco.html">Fale Conosco</a></li>                
             </ul>
         </nav>
     </header>
