--- a/index.html
+++ b/index.html
@@ -15,4 +15,9 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <img src="Fotos/fotohome.png" width="500" alt="Devaria - Olá Mundo!"/>
+        </section>    
+    </main>
 </html>
