--- a/index.html
+++ b/index.html
@@ -20,4 +20,10 @@
             <img src="Fotos/fotohome.png" width="500" alt="Devaria - Olá Mundo!"/>
         </section>    
     </main>
+    <footer>
+        <section>
+            <span>contato@devaria.com.br</span> <br />
+            <span>Conheça o nosso canal do YouTube!</span>
+        </section>
+    </footer>
 </html>
