--- a/Professores.html
+++ b/Professores.html
@@ -22,7 +22,10 @@
                 </div>
                 <article>
                     <h2>Raffa, Fi & Do</h2>
-                    <p></p>
+                    <p>
+                        Os professores sao especialistas em <strong>desenvolvimento de sistemas</strong> com mais de <strong>10 anos de experiência</strong>
+                    </p>
+                    <p>Todas as aulas de back e end serão conduzidas</p>
                 </article>
             </section>
         </main>
