--- a/Professores.html
+++ b/Professores.html
@@ -29,4 +29,10 @@
                 </article>
             </section>
         </main>
+        <footer>
+            <section>
+                <span>contato@devaria.com.br</span> <br />
+                <span>Conheça o nosso canal do YouTube!</span>
+            </section>
+        </footer>
     </body>
