--- a/Professores.html
+++ b/Professores.html
@@ -11,7 +11,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Professores.html">Professores</a></li>
-                    <li><a href="FaleConosco.html">Fale Conosco</a></li>                
+                    <li><a href="FaleConosco.html">Fale Conosco</a></li>
+                    <li><a href="Devstar.html">DevStars</a></li>               
                 </ul>
             </nav>
         </header>
